- exposure of the accountType as a property on the factory. If you happen to have an identical
  user name for a Google account and a hosted account, you need to set this property depending on 
  which account you want to access. Default is GOOGLE_OR_HOSTED, other values are GOOGLE or HOSTED
  as strings.
- fixed an issue with the edit/self uris on the entry. They were not correctly setable.

== 1.0.9.4 ==
- Google Base: fix for incorrect Price attribute behaviour
- Google Base: fix for incorrectly persisting duplicate attributes
- Fix for Content.Type having no default value (issue 41)
- Fix for Content.Type="text/html" parsing incorrectly. The strict check for type="text" is now relaxed to be type="text*", 
  so all text subtypes will be treated the same
- Fix for Content.Type = "html" and "text/html" persistence. What the code does now is: first HTMLDecode the value held, than
  run the standard XMLWriter.WriteString over it (which does HTML encoding). This seems to work fine. 
- Added the gm:stats tags to the Windows Mobile build, accidently forgot to change that project file
- the calendarfeed discarded entries unknown to it in the calendar namespace. This is fixed now. Unknown entries to the parser 
  are now correctly added to the extension elements.
- added the return-empty parameter to the cellquery class
- added URL encoding to the authentication parameters (username/passwords etc that had unallowed FORM post chars caused failed login
  attempts)




== 1.0.9.3 ==
- Google Base changes:
  New features:
    - GBaseQuery supports the following optional parameters; orderby, sortorder, refine and content
    - Support for gm:stats tags
    - GBaseUriFactory can now generate the feed uri of other customers
     
    Fixes:
     - Fixed the GBaseAttributeType hierarchy for date/dateTime/dateTimeRange
     - Fixed the type of the hardcoded ExpirationDate property in GBaseAttributes
- Added a Makefile for Mono builds. This one replaces the Ant file. 	
